--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,62 @@
-wagtail
 asgiref==3.2.7
+beautifulsoup4==4.8.2
 certifi==2020.4.5
 chardet==3.0.4
-Django==3.0.4
+Django==3.1.1
+django-adminlte3==0.1.2
 django-appconf==1.0.4
-django-autoslug==1.9.6
+django-autoslug==1.9.8
 django-bootstrap-modal-forms==1.5.0
 django-braces==1.14.0
+django-cas-ng==4.1.1
 -e git://github.com/RaD/django-chained-selects@f8f5c467d9863e597121bdcf2535d1d6e8c3996e#egg=django_chained_select
 django-classy-tags==1.0.0
+django-comments-xtd==2.6.2
 django-compressor==2.4
 django-contrib-comments==1.9.2
 django-crispy-forms==1.9.0
 django-js-asset==1.2.2
 django-model-utils==4.0.0
+django-modelcluster==5.0.2
 django-mptt==0.11.0
 django-mptt-admin==1.0.1
+django-redis==4.12.1
 django-sass-processor==0.8
 django-select2==7.2.3
 django-star-ratings==0.9.1
+django-suit==2.0a1
 django-tag-parser==3.2
 django-taggit==1.2.0
 django-taggit-templatetags2==1.6.1
+django-treebeard==4.3.1
 django-widget-tweaks==1.4.8
 djangorestframework==3.11.0
 docutils==0.16
+draftjs-exporter==2.1.7
+gunicorn==20.0.4
+html5lib==1.1
 idna==2.9
+l18n==2018.5
 libsass==0.19.4
+lxml==4.5.2
 mysqlclient==1.4.6
-Pillow==7.0.0
+Pillow==7.2.0
+pkg-resources==0.0.0
 python-akismet==0.4.1
+python-cas==1.5.0
 pytz==2019.3
 rcssmin==1.0.6
+redis==3.5.3
 requests==2.23.0
 rjsmin==1.1.0
 six==1.14.0
+soupsieve==2.0.1
 sqlparse==0.3.1
 swapper==1.1.2.post1
-taggit-selectize==2.7.1
+taggit-selectize==2.9.0
 unicode==2.7
 Unidecode==1.1.1
 urllib3==1.25.8
+webencodings==0.5.1
+Willow==1.3
+XlsxWriter==1.3.0
